--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -666,6 +666,7 @@
     <input id="scroll_position" type="text" name="scroll_position" style="display: none;" value="0">
     <input id="pending_input" type="text" name="pending" style="display: none;" value="{{ pending }}">
     <input id="checked_input" type="text" name="checked" style="display: none;" value="{{ checked }}">
+    <input id="loc_input" type="text" name="loc" style="display: none;" value="{{ loc }}">
     <input id="orderby_input" type="text" name="orderby" style="display: none;" value="{{ orderby }}">
     <input id="tiger_certainty_input" type="text" name="tiger_certainty" style="display: none;"
            value="{{ tiger_certainty }}">
@@ -1680,6 +1681,7 @@
             $("#scroll_position").val(0);
             $("#pending_input").val('na');
             $("#checked_input").val('na');
+            $("#loc_input").val('na');
             $("#orderby_input").val('date');
             $("#tiger_certainty_input").val('all');
             $("#site_certainty_input").val('all');
