--- a/tigacrafting/static/tigacrafting/tigacrafting_style.css
+++ b/tigacrafting/static/tigacrafting/tigacrafting_style.css
@@ -139,3 +139,22 @@ ul {
     margin-top: 5px;
     margin-bottom: 5px;
 }
+
+.fastCheck label{
+    display: inline-grid;
+    max-width: 100%;
+    margin-bottom: 5px;
+    font-weight: 700;
+    float: right;
+    padding-right: 25px;
+}
+
+.fastCheck input{
+    -ms-transform: scale(2);
+    -moz-transform: scale(2);
+    -webkit-transform: scale(2);
+    -o-transform: scale(2);
+    padding: 10px;
+    margin-right: 15px;
+    float: right;
+}
