--- a/tigacrafting/templates/tigacrafting/photo_grid.html
+++ b/tigacrafting/templates/tigacrafting/photo_grid.html
@@ -9,13 +9,17 @@
     <style>
         .grid-item { background-color: grey; height: 120px; width: 120px; float: left; margin-top: 5px;margin-bottom: 5px;}
         .grid-item-large { background-color: grey; height: 180px; width: 380px; float: left; margin-top: 5px;margin-bottom: 5px; overflow:auto; padding: 10px 10px 10px 10px;}
-        .grid { /*border-style:solid; border-width: 1px;*/ background-color: lightgray; margin-top: 10px; margin-bottom: 10px;}
+
+        .fastCheck {background-color: lightgray; margin-bottom: 10px; height: 40px;}
+
+        .grid { /*border-style:solid; border-width: 1px;*/ background-color: lightgray; margin-top: 10px;}
         .frame {position: absolute;margin: auto;top: 0;left: 0;right: 0;bottom: 0;}
         .p-small { font-family: "Helvetica Neue",Helvetica,Arial,sans-serif; font-size: 12px; color: #fff;}
         .site { background-color: #4169E1; }
         .site.storm_drain { background-color: #4169E1; }
         .site.other { background-color: #a7b9f1; }
         .adult { background-color: orange; }
+        .fastUpload { position: absolute; left: 1025px; top: 154px; }
     </style>
     <script src={% static "tigacrafting/jquery/1.11.1/jquery.min.js" %}></script>
     <script src={% static "tigacrafting/jquery-ui/jquery-ui.min.js" %}></script>
@@ -184,13 +188,18 @@
                     </div>
                 {% endif %}
                 {% if photo.hide == False %}
-                <div class="grid-item valid">
-                    <a href="/media/{{ photo.photo }}" target="_blank">
-                        <img class="frame" src="{{ photo.get_small_url }}">
-                    </a>
-                </div>
+                    <div class="grid-item valid">
+                        <a href="/media/{{ photo.photo }}" target="_blank">
+                            <img class="frame" src="{{ photo.get_small_url }}">
+                        </a>
+                    </div>
                 {% endif %}
             {% endfor %}
+
+        </div>
+        <div class="fastCheck {{form.instance.type}} {% if form.instance.get_site_cat == 0 %}storm_drain{% else %}other {% endif %}" style="">
+            <label>Fast Upload</label>
+            {{ form.fastUpload }}
         </div>
     {% endfor %}
         <input id="save_formset" type="text" name="save_formset" style="display: none;" value="F">
