--- a/tigacrafting/templates/tigacrafting/photo_grid.html
+++ b/tigacrafting/templates/tigacrafting/photo_grid.html
@@ -164,11 +164,8 @@
         </div>
     </div>
     <div class="row">
-        <div id="instruc" title="Requisitos del archivo de límites (Shapefiles)">
-            <p class="infoPopup">Ahora mismo, este control solamente acepta Shapefiles con una <b>proyección WGS84</b>.
-                Un fichero shapefile consta de <b>múltiples ficheros con extensiones
-                diferentes (*.shp, *.dbf, *.shx) : estos ficheros deben comprimirse en un solo fichero
-                zip</b> y el control aceptará el shapefile comprimido.</p>
+        <div id="dialogConfirmUpPhoto" title="Confirmación">
+            <p class="infoPopup">Si deseas que los datos seleccionados aparezcan en el mapa haz clic en "Aceptar".</p>
         </div>
 
     </div>
@@ -310,10 +307,7 @@
             {% endif %}
 
 
-            $("#save_button").click(function(){
 
-
-            });
 
 
 
