Accept sites immediatly

--- a/tigacrafting/static/tigacrafting/tigacrafting_style.css
+++ b/tigacrafting/static/tigacrafting/tigacrafting_style.css
@@ -164,8 +164,8 @@ ul {
 }
 
 .confirmUpPhoto .ui-widget-header{
-    border: 1px solid #9ac635;
-    background: #9ac635;
+    border: 1px solid #101010;
+    background: #101010;
     color: white;
     font-weight: bold;
 }
