--- a/tigacrafting/templates/tigacrafting/photo_grid.html
+++ b/tigacrafting/templates/tigacrafting/photo_grid.html
@@ -167,7 +167,7 @@
         <div id="dialogConfirmUpPhoto" title="Warning">
             <p class="infoPopup">
                 <span>The following reports have been marked as 'fast upload':</span><br>
-                <span class="reportIDs"></span><br>
+                <span class="reportIDs"></span>
                 <span>and will be published on the map this same day at around midnight. Are you sure you want to proceed?</span>
             </p>
         </div>
