--- a/tigacrafting/templates/tigacrafting/superexpert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/superexpert_report_annotation.html
@@ -100,9 +100,9 @@
 <li class="dropdown">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Monitor <span class="caret"></span></a>
     <ul class="dropdown-menu" role="menu">
-        <li><a href={% url 'expert_report_status' %}>Reports</a></li>
-        <li><a href={% url 'expert_status' %}>People</a></li>
-        <li><a href={% url 'workload_stats' %}>Workload Stats</a></li>
+        <li><a href="{% url 'expert_report_status' %}">Reports</a></li>
+        <li><a href="{% url 'expert_status' %}">People</a></li>
+        <li><a href="{% url 'workload_stats' %}">Workload Stats</a></li>
     </ul>
 </li>
 {% endblock %}
