--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -505,10 +505,7 @@
 
                     </div>
 
-
-                <a class="btn btn-default infoPhoto" value="{{ form.instance.report.version_UUID }}">Info. Photo</a>
-
-
+                    <a class="btn btn-default infoPhoto" value="{{ form.instance.report.version_UUID }}">Info. Photo</a>
 
                 {% else %}
 
@@ -522,11 +519,17 @@
             </div>
 
             <div id="infoPhotoDialog" title="Photo's Metadata">
-                <p class="infoPopup">
-                    <span>Lat:</span>
-                    <span>Long:</span>
+                {{ photoData }}
+                <span class="infoPopup">
 
-                </p>
+
+
+                    <ul>
+                        {% for pD in photoData %}
+                            <li>{{ pD.ColorSpace }}</li>
+                        {% endfor %}
+                    </ul>
+                </span>
             </div>
 
 
@@ -1002,6 +1005,7 @@
 
 
 {% block body_scripts %}
+
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
