Popup Metadata photo (coord OK)

--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -519,11 +519,20 @@
             </div>
 
             <div id="infoPhotoDialog" title="Photo's Metadata">
-                {{ photoData }}
+                <!--{{ photoData }}-->
+
+                <span class="infoPopupTop">
+                {% if photoCoord %}
+
+                    <ul>
+                        <li>{{ photoCoord.lat }}</li>
+                        <li>{{ photoCoord.lan }}</li>
+                    </ul>
+
+                {% endif %}
+                    </span>
+
                 <span class="infoPopup">
-
-
-
                     <ul>
                         {% for pD in photoData %}
                             <li>{{ pD.ColorSpace }}</li>
