Metadata woking (faltan estilos)

--- a/tigacrafting/static/tigacrafting/tigacrafting_style.css
+++ b/tigacrafting/static/tigacrafting/tigacrafting_style.css
@@ -190,6 +190,8 @@ ul {
 
 #infoPhotoDialog{
     display: none;
+    height: 450x !important;
+
 }
 
 .popupInfoPhoto .ui-widget-header{
@@ -202,9 +204,14 @@ ul {
 .popupInfoPhoto {
     position: fixed !important;
     z-index: 1500 !important;
-    width: 400px !important;
+    /*width: 400px !important;*/
     top: 50% !important;
     left: 50% !important;
     transform: translate(-50%,-50%);
+    /*height: 450px !important;*/
+}
+
+#noDataAvailable{
+    display: none;
 }
 
