--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -383,31 +383,29 @@
                         <div class="row">
                             <div class="col-md-6">
                             <strong>Species classification:</strong><br>
-                            <select id="species_value_{{ form.instance.id }}">
+                            <select id="category_{{ form.instance.id }}">
                                 <option value="">--------------</option>
-                                {% for sp in species_list %}
-                                <option value="{{ sp.id }}">{{ sp.species_name }}</option>
+                                {% for cat in category_list %}
+                                <option data-needs-value="{% if cat.specify_certainty_level %}1{% else %}0{% endif %}" value="{{ cat.id }}">{{ cat.name }}</option>
                                 {% endfor %}
-                                <option class="red" value="0">Mix/Combo</option>
-                                <option class="red" value="-1">Others</option>
-                                <option class="red" value="-2">Not sure</option>
                             </select>
                             </div>
                             <div class="col-md-6">
-                                <div class="container_cert" style="display:none;">
+                                <div id="container_value_{{ form.instance.id }}" class="container_value"  style="display:none;">
                                     <strong>Species certainty:</strong><br>
-                                    <select id="species_cert_{{ form.instance.id }}">
+                                    <select id="categoryvalue_{{ form.instance.id }}">
                                         <option value="">--------------</option>
                                         <option value="2">Definitely</option>
                                         <option value="1">Probably</option>
+                                        <option value="0">None</option>
                                     </select>
                                 </div>
-                                <div class="container_mix">
+                                <div id="container_mix_{{ form.instance.id }}" class="container_mix" style="display:none;">
                                     <strong>Species combo:</strong><br>
-                                    <select id="species_combo_{{ form.instance.id }}">
+                                    <select id="complex_{{ form.instance.id }}">
                                         <option value="">--------------</option>
-                                        {% for sp in species_combo %}
-                                        <option value="{{ sp.id }}">{{ sp.species_name }}</option>
+                                        {% for complex in complex_list %}
+                                        <option value="{{ complex.id }}">{{ complex.description }}</option>
                                         {% endfor %}
                                     </select>
                                 </div>
@@ -2002,7 +2000,7 @@
 
     </script>
 
-
+    <script src={% static "tigacrafting/categories_combo.js" %}></script>
 
 
 {% endblock %}
