Working euro entolab

--- a/tigacrafting/templates/tigacrafting/single_report_view.html
+++ b/tigacrafting/templates/tigacrafting/single_report_view.html
@@ -262,7 +262,9 @@
                                                         {% endif %}
                                                     </td>
                                                     <td>
-                                                        {{ ano.get_status_bootstrap | safe }} {% include "tigacrafting/score_label.html" with score=ano.get_score text=ano.get_category %}
+                                                        <!-- $EURO_SWITCH -->
+                                                        <!-- {{ ano.get_status_bootstrap | safe }} {% include "tigacrafting/score_label.html" with score=ano.get_score text=ano.get_category %} -->
+                                                        {{ ano.get_status_bootstrap | safe }} {% include "tigacrafting/score_label_euro.html" with text=ano.get_category_euro color=ano.get_html_color_for_label %}
                                                     </td>
                                                 </tr>
                                                 <tr>
