--- a/tigacrafting/templates/tigacrafting/superexpert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/superexpert_report_annotation.html
@@ -118,7 +118,9 @@
             {{ form.instance.report.get_final_expert_status_bootstrap | safe }}
             <!--<strong>Current Status <i>Albopictus</i>:</strong>  {% include "tigacrafting/score_label.html" with score=form.instance.report.get_final_expert_score text=form.instance.report.get_final_expert_category %}
             <strong>Current Status <i>Aegypti</i>:</strong> {% include "tigacrafting/score_label.html" with score=form.instance.report.get_final_expert_score_aegypti text=form.instance.report.get_final_expert_category_aegypti %}-->
-            <strong>Current Status:</strong> {% include "tigacrafting/score_label.html" with score=form.instance.report.get_final_combined_expert_score text=form.instance.report.get_final_combined_expert_category %}
+            <!-- %EURO_SWITCH% -->
+            <strong>Current Status:</strong> {% include "tigacrafting/score_label_euro.html" with text=form.instance.report.get_final_combined_expert_category_euro color=form.instance.report.get_html_color_for_label %}
+            <!-- <strong>Current Status:</strong> {% include "tigacrafting/score_label.html" with score=form.instance.report.get_final_combined_expert_score text=form.instance.report.get_final_combined_expert_category %} -->
             <!--<strong>Current Status:</strong>  {% include "tigacrafting/score_label.html" with score=form.instance.report.get_final_expert_score text=form.instance.report.get_final_expert_category %}-->
 
             <div class="collapse" id="current_status_collapse{{ form.instance.id }}">
@@ -185,7 +187,9 @@
                                    aria-controls="expert_collapse' + ano.report.version_UUID + str(ano.id) + '"><i
                                     class="fa fa-plus-square-o"></i></a> {{ ano.user.username }}
                             </td>
-                            <td>{{ ano.get_status_bootstrap | safe }} {% include "tigacrafting/score_label.html" with score=ano.get_score text=ano.get_category %}</td>
+                            <!-- %EURO_SWITCH% -->
+                            <!--<td>{{ ano.get_status_bootstrap | safe }} {% include "tigacrafting/score_label.html" with score=ano.get_score text=ano.get_category %}</td>-->
+                            <td>{{ ano.get_status_bootstrap | safe }} {% include "tigacrafting/score_label_euro.html" with text=ano.get_category_euro color=ano.get_html_color_for_label %}</td>
                         </tr>
                         <tr>
                             <td colspan="12" class="hiddenRow">
